# gSLICr

./: CMakeLists.txt  gSLIC.cpp
masking/: masking.cpp  masking.h
